Taking care of input stream resources